<resources>
    <string name="app_name">TimerPicker</string>
    <string name="dialog_title">Create a New Timer</string>
    <string name="dialog_set">Set</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="one_button_text">1</string>
    <string name="two_button_text">2</string>
    <string name="three_button_text">3</string>
    <string name="four_button_text">4</string>
    <string name="five_button_text">5</string>
    <string name="six_button_text">6</string>
    <string name="seven_button_text">7</string>
    <string name="eight_button_text">8</string>
    <string name="nine_button_text">9</string>
    <string name="zero_button_text">0</string>
    <string name="delete_button_text">DEL</string>
</resources>
